# myrtti

./: .gitignore  CMakeLists.txt  README.md  paper.md
doc/: paper.md
doc/reports/: mfc.json  ue_raw.txt  unreal.json
notes/to_base_disasms/: cast_deep_to_base.ll  cast_deep_to_base.s  cast_wide_to_base.ll  cast_wide_to_base.s  collision_report.txt  deep_root_info.ll  deep_root_info.s  deep_to_base.s  wide_root_info.ll  wide_root_info.s  wide_to_base.s
src/clang-plugin/: CMakeLists.txt
src/clang-plugin/impl/: main.cpp  myrtti_plugin.cpp
src/demo/: CMakeLists.txt
src/demo/impl/: basic_demo.cpp  main.cpp  visitor_demo.cpp
src/myrtti/: CMakeLists.txt
src/myrtti/impl/: rtti_lib.cpp
src/myrtti/impl/myrtti/: class_id.cpp  hierarchy.cpp  runtime.cpp
src/myrtti/include/: myrtti.h
src/myrtti/include/crc/: crc.hpp
src/myrtti/include/myrtti/: class_id.h  class_id_macros.h  class_info.h  dag.h  hierarchy.h  runtime.h  runtime_v1.h  visitor.h
src/myrtti/include/utils/: nullout.h
src/myrtti/include/utils/macros/: concat.h  generate_VAMACRO_PREFIX.py  macros_common.h  narg.h  va_arg_prefix.h
tests/: CMakeLists.txt
tests/MFCBenchmarks/: MFCBenchmarks.sln  ReadMe.md
tests/MFCBenchmarks/MFCBenchmarksProj/: MFCBenchmarksProj.vcxproj  benchmarks_common.h  benchmarks_main.cpp
tests/benchmark/: CMakeLists.txt  compare_casts.cpp  hierarchy_20items.inc  inherit_me_with_myrtti.inc  legacy_casts.cpp  myrtti_benchmark.cpp  myrtti_casts.cpp  myrtti_to_base.cpp  rtti_ops.cpp
tests/benchmark/details/: benchmarks_common.h  hierarchy_20items.inc  inherit_me_with_myrtti.inc
tests/benchmark/plotmaker/: plotmaker.py
tests/clang-plugin/: CMakeLists.txt  foo.cpp  lit.cfg.py  simple.cpp
tests/uebenchmarks/UEBenchProject/: .gitignore  UEBenchProject.uproject
tests/uebenchmarks/UEBenchProject/Config/: DefaultEngine.ini  DefaultGame.ini
tests/uebenchmarks/UEBenchProject/Plugins/MyRTTIBenchmarkActors/: MyRTTIBenchmarkActors.uplugin
tests/uebenchmarks/UEBenchProject/Plugins/MyRTTIBenchmarkActors/Binaries/Mac/: UE4Editor.modules
tests/uebenchmarks/UEBenchProject/Plugins/MyRTTIBenchmarkActors/Config/: DefaultMyRTTIBenchmarkActors.ini
tests/uebenchmarks/UEBenchProject/Plugins/MyRTTIBenchmarkActors/Source/MyRTTIBenchmarkActors/: MyRTTIBenchmarkActors.Build.cs
tests/uebenchmarks/UEBenchProject/Plugins/MyRTTIBenchmarkActors/Source/MyRTTIBenchmarkActors/Private/: MyRTTIBenchmarkActors.cpp  MyRTTICastNegPluginActor.cpp  MyRTTICastPluginActor.cpp  MyRTTITryStaticNegPluginActor.cpp  MyRTTITryStaticPluginActor.cpp  UECastNegPluginActor.cpp  UECastPluginActor.cpp  myrtti_utils.h
tests/uebenchmarks/UEBenchProject/Plugins/MyRTTIBenchmarkActors/Source/MyRTTIBenchmarkActors/Private/UEBenchmarkHierarchy/: UUnreal_Deep_0.cpp  UUnreal_Deep_0.h  UUnreal_Deep_1.cpp  UUnreal_Deep_1.h  UUnreal_Deep_10.cpp  UUnreal_Deep_10.h  UUnreal_Deep_11.cpp  UUnreal_Deep_11.h  UUnreal_Deep_12.cpp  UUnreal_Deep_12.h  UUnreal_Deep_13.cpp  UUnreal_Deep_13.h  UUnreal_Deep_14.cpp  UUnreal_Deep_14.h  UUnreal_Deep_15.cpp  UUnreal_Deep_15.h  UUnreal_Deep_16.cpp  UUnreal_Deep_16.h  UUnreal_Deep_17.cpp  UUnreal_Deep_17.h  UUnreal_Deep_18.cpp  UUnreal_Deep_18.h  UUnreal_Deep_19.cpp  UUnreal_Deep_19.h  UUnreal_Deep_1_v2.cpp  UUnreal_Deep_1_v2.h  UUnreal_Deep_2.cpp  UUnreal_Deep_2.h  UUnreal_Deep_3.cpp  UUnreal_Deep_3.h  UUnreal_Deep_4.cpp  UUnreal_Deep_4.h  UUnreal_Deep_5.cpp  UUnreal_Deep_5.h  UUnreal_Deep_6.cpp  UUnreal_Deep_6.h  UUnreal_Deep_7.cpp  UUnreal_Deep_7.h  UUnreal_Deep_8.cpp  UUnreal_Deep_8.h  (+3 more)
tests/uebenchmarks/UEBenchProject/Plugins/MyRTTIBenchmarkActors/Source/MyRTTIBenchmarkActors/Public/: MyRTTIBenchmarkActors.h  MyRTTICastNegPluginActor.h  MyRTTICastPluginActor.h  MyRTTITryStaticNegPluginActor.h  MyRTTITryStaticPluginActor.h  UECastNegPluginActor.h  UECastPluginActor.h
tests/uebenchmarks/UEBenchProject/Source/: UEBenchProject.Target.cs  UEBenchProjectEditor.Target.cs
tests/uebenchmarks/UEBenchProject/Source/UEBenchProject/: UEBenchProject.Build.cs  UEBenchProject.cpp  UEBenchProjectGameModeBase.cpp  UEBenchProjectGameModeBase.h
tests/uebenchmarks/UEBenchProject/UEBenchProject.xcworkspace/: contents.xcworkspacedata
tests/uebenchmarks/gen-hierarchy/: main.py
tests/unit/: CMakeLists.txt  basic.cpp  class_id.cpp
